--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": ["payment", "nette", "comgate", "php"],
     "require": {
         "php": ">=7.4",
-        "nette/nette": "^3.0"
+        "nette/nette": "^3.0",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "psr-4": {
